create github pages

--- a/index.html
+++ b/index.html
@@ -58,13 +58,12 @@
                         Over ons
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page1.html"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>
-                    Shop</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page1.html"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>Shop</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -100,7 +99,7 @@
                 <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">
                    Wij zijn elpee en wij recycleren LP-platen om&nbsp;hier een leuk krukje of bijzettafeltje van maken.
                 </p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">LEER MEER</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">LEES MEER</a></div>
             </div>
         </div>
     </div>
@@ -143,7 +142,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Bedankt om je in te schrijven op onze nieuwsbrief!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fXGajTVW73e3qZSpRqSACNK3d85lINNQQUOyGobSBoSI8upghoFeN1f9FPIZs7RjvcIeiDa+suxkehEcIB3ErM4RPrbfyccCI4mEvRA2SpeIfWa4Fj6AtuB7itNS1kv9">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ju4jcq35b+43LTMPSKQdY4XzBwAQ86HJSTHNlcqjh+fK9S5S+Lz+IhSSgxU62anDB+aksHeQGmXf/MENcYVwq08lJKzHMYGYYe6NowwRIR3K5voi2c5QXDdsuxmrv09K">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-t">
                         <span class="input-group-btn">
@@ -168,8 +167,7 @@
                     CONTACTFORMULIER
                 </h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">
-                    Voeg eenvoudig inschrijf- en contactformulieren toe zonder serverintegratie.
-                </h3>
+                    Heb je een vraag? vul dan onderstaand formulier in.</h3>
             </div>
         </div>
     </div>
@@ -181,7 +179,7 @@
 groetjes,
 Elpee</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="urFm4tWYk4ip0ScS1dXle35S0m61CLoDYgYUdEAl8bQ3ijbifYSLNgc9pt4ZVGNWREqrlJzmsuyiyPGZBKT8210JV7B2khMwNLK2Xw4LjNBF+MqnMN25EzfETMvN6o7c">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="W3rVOR/9m771yxO03uxQYNY1lLEVAG4x6RsUPEwFC9ohZ7TI63gpcHUwobhTh6iIxvqgqPLFon5kWraoUo2cDN/aA0vxo5YgYNYtix1VybGC9VY3/aeqq6btrZ4/F2Ez">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
