--- a/page2.html
+++ b/page2.html
@@ -55,14 +55,13 @@
                         Over ons
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page1.html"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>
-                    Shop</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page1.html"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>Shop</a></div>
         </div>
     </nav>
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
