--- a/page3.html
+++ b/page3.html
@@ -55,13 +55,12 @@
                         Over ons
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page1.html"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>
-                    Shop</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page1.html"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>Shop</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header4 cid-ralIUn1c5b mbr-parallax-background" id="header4-n">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header4 cid-ralIUn1c5b mbr-parallax-background" id="header4-n">
 
     
 
